add demo pic and fix ui details

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
         }
 
         .add_button, .red_button {
-            width: 2%;
+            width: calc(2% - 1px);
             cursor: pointer;
+            border-left: 1px solid;
             float: right;
             text-align: center;
             vertical-align: middle;
